--- a/PcHardwareNetwork/app/views/users/show.html.erb
+++ b/PcHardwareNetwork/app/views/users/show.html.erb
@@ -39,6 +39,8 @@
                 <% end %>
             </tbody>
         </table>
+        <hr/>
+        <h2 class="text-end">Money spent: $<%= total_purchase_money(@user) %></h2>
     </div>
 </div>
 
