--- a/PcHardwareNetwork/app/views/builds/show.html.erb
+++ b/PcHardwareNetwork/app/views/builds/show.html.erb
@@ -65,6 +65,9 @@
                 <h4 class="text-left"><%= comment.user.email %></h4>
                 <p class="card-text"><%= comment.description %></p>
                 <p class="card-text text-end"><small class="text-muted">Last updated at: <%= comment.updated_at %></small></p>
+                <% if current_user && ((current_user.id == comment.user_id) || current_user.admin) %>
+                <%= link_to "Delete", comment, method: :delete, data: { confirm: "Are you sure?" } %>
+                <% end %>
             </div>
             <hr/>
             <% end %>
